[gd_scene load_steps=33 format=3 uid="uid://dqunl7ie7o134"]

[ext_resource type="Script" path="res://Scripts/ScriptCharacters/slimeMage.gd" id="1_ek683"]
[ext_resource type="Shader" path="res://Shaders/dmg.gdshader" id="1_rerqk"]
[ext_resource type="Texture2D" uid="uid://7geahchtie37" path="res://Assets/Enemies/Slime/deadMage.png" id="2_knca1"]
[ext_resource type="Texture2D" uid="uid://cnveijlwi2wn4" path="res://Assets/Enemies/Slime/dmgMage.png" id="3_4xkim"]
[ext_resource type="Texture2D" uid="uid://dxiqolfs30ylm" path="res://Assets/Enemies/Slime/idleMage.png" id="4_mlfk6"]
[ext_resource type="AudioStream" uid="uid://clofkfg3dasam" path="res://Assets/Sounds and Music/slimeHit.wav" id="7_008gq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rr7ql"]
shader = ExtResource("1_rerqk")
shader_parameter/flicker_speed = 10.0
shader_parameter/flicker_amount = 0.5
shader_parameter/flicker_enabled = false

[sub_resource type="AtlasTexture" id="AtlasTexture_h7aqr"]
atlas = ExtResource("2_knca1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcb74"]
atlas = ExtResource("2_knca1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f2wf"]
atlas = ExtResource("2_knca1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prkge"]
atlas = ExtResource("2_knca1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2pxe"]
atlas = ExtResource("2_knca1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j37xa"]
atlas = ExtResource("3_4xkim")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh40l"]
atlas = ExtResource("3_4xkim")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0cqv"]
atlas = ExtResource("3_4xkim")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaryq"]
atlas = ExtResource("3_4xkim")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq08h"]
atlas = ExtResource("3_4xkim")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixk16"]
atlas = ExtResource("3_4xkim")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfyhi"]
atlas = ExtResource("4_mlfk6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bqp3"]
atlas = ExtResource("4_mlfk6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqlgu"]
atlas = ExtResource("4_mlfk6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0ype"]
atlas = ExtResource("4_mlfk6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1q6f"]
atlas = ExtResource("4_mlfk6")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yleq3"]
atlas = ExtResource("4_mlfk6")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf3wr"]
atlas = ExtResource("4_mlfk6")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6kn5"]
atlas = ExtResource("4_mlfk6")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n8uh"]
atlas = ExtResource("4_mlfk6")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmfpq"]
atlas = ExtResource("4_mlfk6")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x8442"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7aqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcb74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f2wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prkge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2pxe")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j37xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh40l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0cqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaryq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq08h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixk16")
}],
"loop": true,
"name": &"dmg",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfyhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bqp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqlgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0ype")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1q6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yleq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf3wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6kn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n8uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmfpq")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tuonm"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_glbs7"]
radius = 155.048

[sub_resource type="CircleShape2D" id="CircleShape2D_kyngu"]
radius = 8.06226

[node name="SlimeMage" type="CharacterBody2D" groups=["enemigos"]]
z_index = 2
texture_filter = 1
position = Vector2(0, -6)
scale = Vector2(1.4, 1.4)
collision_layer = 2
collision_mask = 2
motion_mode = 1
script = ExtResource("1_ek683")

[node name="Sprite" type="AnimatedSprite2D" parent="." groups=["sprites"]]
texture_filter = 1
material = SubResource("ShaderMaterial_rr7ql")
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_x8442")
animation = &"death"
frame_progress = 0.757519

[node name="Hitbox" type="CollisionShape2D" parent="."]
texture_filter = 1
position = Vector2(0, 3.99999)
rotation = 3.14159
shape = SubResource("CircleShape2D_tuonm")

[node name="SombraMark" type="Marker2D" parent="."]
texture_filter = 1
position = Vector2(-4, 6)

[node name="ShootingArea" type="Area2D" parent="."]
texture_filter = 1
position = Vector2(0, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootingArea"]
texture_filter = 1
shape = SubResource("CircleShape2D_glbs7")

[node name="DmgArea" type="Area2D" parent="."]
texture_filter = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="DmgArea"]
texture_filter = 1
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_kyngu")
debug_color = Color(0.686275, 0, 0.168627, 0.419608)

[node name="Timers" type="Node" parent="."]

[node name="DeathTimer" type="Timer" parent="Timers"]
wait_time = 0.7

[node name="IdleTimer" type="Timer" parent="Timers"]

[node name="DmgTimer" type="Timer" parent="Timers"]
wait_time = 0.7

[node name="FireBall" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="Dmg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_008gq")

[connection signal="body_entered" from="ShootingArea" to="." method="_on_shooting_area_body_entered"]
[connection signal="body_exited" from="ShootingArea" to="." method="_on_shooting_area_body_exited"]
[connection signal="area_entered" from="DmgArea" to="." method="_on_dmg_area_area_entered"]
[connection signal="area_exited" from="DmgArea" to="." method="_on_dmg_area_area_exited"]
[connection signal="timeout" from="Timers/DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="Timers/DmgTimer" to="." method="_on_dmg_timer_timeout"]
[connection signal="timeout" from="Timers/FireBall" to="." method="_on_fire_ball_timeout"]
